# xivchatbridge

./: .gitignore  LICENSE.md  README.md  repo.json
DalamudPlugin/: XIVChatBridge.sln
DalamudPlugin/XIVChatBridge/: ChatMessage.cs  Configuration.cs  GameFunctions.cs  Plugin.cs  XIVChatBridge.csproj  XIVChatBridge.json
DalamudPlugin/XIVChatBridge/Frontend/: XIVChatBridgeFrontend-10aef6653f5038be.js  XIVChatBridgeFrontend-10aef6653f5038be_bg.wasm  XIVChatBridgeFrontend-1ac8d0cebe22b2a6.js  XIVChatBridgeFrontend-1ac8d0cebe22b2a6_bg.wasm  XIVChatBridgeFrontend-594eef1f4b36fb03.js  XIVChatBridgeFrontend-594eef1f4b36fb03_bg.wasm  XIVChatBridgeFrontend-a08822fafd7906f1_bg.wasm  XIVChatBridgeFrontend-cd410ef31e4cfe9d_bg.wasm  index-422ecf1b455974.css  index-7f52eb614d7c73c7.css  index-a37a45b366b72be.css  index-b4904ce546e6841d.css  index.html
DalamudPlugin/XIVChatBridge/Properties/: Resources.Designer.cs
DalamudPlugin/XIVChatBridge/Windows/: ChannelSelection.cs  ConfigWindow.cs  ImGuiHelper.cs  MainWindow.cs
XIVChatUI/: Cargo.toml  get_fonts.sh  index.html  index.scss
XIVChatUI/.cargo/: config.toml
XIVChatUI/src/: app.rs
